--- a/day4_opt/style.css
+++ b/day4_opt/style.css
@@ -31,7 +31,7 @@ h1{
     text-decoration: none;
     color: white;
     background: steelblue;
-    padding: 1em 4 em;
+    padding: 4em 4 em;
 }
 
 * {
@@ -40,8 +40,8 @@ h1{
 
 .hero{
     background: linear-gradient( to left, #83a4d4, #b6fbff);
-    padding: 5em 0;
-    height: 0;
+    padding: 10vh 0;
+    height: 50vmin;
 }
 
 .hero-img{
@@ -49,7 +49,7 @@ h1{
 }
 
 .hero-title{
-    font-size: 4em;
+    font-size: 8vw;
     line-height: 1;
     text-transform: uppercase;
     margin: 0 0 .25em;
@@ -61,7 +61,12 @@ h1{
 }
 
 .more-content{
-    background: url(//unsplash.it/800/400);
+    background-image: linear-gradient("img/girl_beach.jpg");
+    padding-top: 90px;
+    padding-left: 60px;
+    background-color: seashell;
     background-size: cover;
-    height: 1000px;
+    height: 900px;
+    width: 1200px;
+
 }
