--- a/day_5/style.css
+++ b/day_5/style.css
@@ -3,7 +3,7 @@
 }
 
 .dark-blue{
-    position: absolute;
+    display: flex;
     width: 1440px;
     height: 670px;
     left: 0px;
@@ -27,9 +27,34 @@
     color: #FFFFFF;
 }
 
-.button{
+p{
     position: absolute;
-    left: 17%;
+    width:710px;
+    height: 365px;
+    left: 122px;
+    top: 300px;
+
+    color: #FFFFFF;
+}
+
+.button{
+    display: block;
+    width:180px;
+    height:32px;
+    background: mediumturquoise;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    color: #072A2D;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    position: absolute;
+    top: 480px;
+    left: 122px;
+
+
+    /*left: 17%;
     right: 17%;
     top: 25%;
     bottom: 24%;
@@ -40,7 +65,5 @@
     font-size: 21px;
     line-height: 150%;
     letter-spacing: .05em;
-    text-transform: uppercase;
-
-    color: #072A2D;
+    text-transform: uppercase;*/
 }
