--- a/day_5/style.css
+++ b/day_5/style.css
@@ -37,6 +37,12 @@ p{
     color: #FFFFFF;
 }
 
+body{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
 .button{
     display: block;
     width:180px;
