--- a/day6/style.css
+++ b/day6/style.css
@@ -1,5 +1,21 @@
+*{
+    box-sizing: border-box;
+}
+
+h1{
+    font-style: uppercase;
+}
+
 h2{
     font-size: 2.25em;
+    font-weight: 900;
+}
+
+body{
+    font-family: inherit;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
 p, ul{
@@ -7,19 +23,35 @@ p, ul{
 }
 
 .cta{
+    display: inline-block;
     background: #ee6352;
     padding:1em;
     color: rgba(0,0,0,0.8);
     font: 1.2em;
 }
 
+.cta_body{
+    font-size: 1.25em;
+    font-weight: 900;
+}
+
 .cta_title{
     margin: 0 0 0.5em;
     color: white;
+    font-size: 3rem;
 }
 
-.btn{
+.cta_btn{
     display: inline-block;
     color: inherit;
     text-decoration: none;
+    padding: .5rem 1.5rem;
+    background:white;
+    transition: 250ms;
+    font-size: 1.25rem;
+}
+
+.cta_btn:hover{
+    background: rgba(0,0,0,.8);
+    color: white;
 }
