--- a/day_9/style.css
+++ b/day_9/style.css
@@ -7,10 +7,11 @@ header{
     padding: .5em 0;
 }
 .nav_list{
+    display: flex;
     color: #fff;
     text-decoration: none;
     margin: 0;
-    padding: 0;
+    padding: 2px;
     list-style: none;
 }
 
@@ -18,7 +19,10 @@ header{
     color:#fff;
     text-decoration: none;
 }
+.nav_item{
+    margin-right: 2em;
 
+}
 .nav_item_butt{
     background: #fff;
     color: #113366;
@@ -29,6 +33,12 @@ header{
 .nav_butt{
     color: #113366;
 }
+
+.nav_button:hover,
+.btn:focus {
+    opacity: .75; 
+}
+
 
 body {
     margin: 0;
