--- a/bonus/style.css
+++ b/bonus/style.css
@@ -24,13 +24,18 @@ body{
     background: white;
     padding: 3em;
     box-shadow: 0 0 3em rgba(0,0,0,.15);
-    width: 70%;
+    width: min(500px, 70%);
+    /*width: max(100px, 20%, 50vh)*/
 
-    max-width: 600px;;
 }
 .title{
     margin: 0 0 .5em;
     font-weight: 900;
     color: var(--clr-primary);
+    line-height: .8;
 
+}
+
+.para{
+    font-size: calc(1vw+ .5rem);
 }
