--- a/bonus/style.css
+++ b/bonus/style.css
@@ -27,6 +27,7 @@ body{
     width: min(500px, 70%);
     /*width: max(100px, 20%, 50vh)*/
 
+
 }
 .title{
     margin: 0 0 .5em;
@@ -38,4 +39,5 @@ body{
 
 .para{
     font-size: calc(1vw+ .5rem);
+    font-size: clamp(1rem, 1.5vw, 1.25rem);
 }
