--- a/mediaque_13/style.css
+++ b/mediaque_13/style.css
@@ -14,6 +14,9 @@ body{
     padding: 10em 0;
     background-color: steelblue;
 }
+p{
+    
+}
 
 @media (min-width: 600px) and (max-width: 900px) { /*OR max-width*/
     .example{
