--- a/Day_12_Big/style.css
+++ b/Day_12_Big/style.css
@@ -2,26 +2,28 @@
     margin: 0 auto;
     max-width: 1000px;
 }
-.container{
+.intro{
     max-width:1128px;
-}
-header{
     background-color: #F3EED9;
     min-height: 330px;
+}
+
+.intro_text{
+    text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
 }
 
-header, h2{
+.intro_title{
     font-family:'Playfair Display', serif;
 }
 
 /*font-family: 'Playfair Display', serif;
 */
-.first{
+.section-two{
     margin: 200px
 }
 
-.firsth2{
+.section_title{
     font-family: 'Roboto', serif;
     color: #824936;
 }
@@ -31,7 +33,7 @@ header, h2{
     padding: 20px;
 }
 
-.second{
+.section-three{
     background-color: #222C2A;
     color: whitesmoke;
 }
@@ -41,7 +43,7 @@ header, h2{
     color:#F3EED9;
 }
 
-.third{
+.section-four{
     background-color: #824936;
     color:whitesmoke;
 }
