--- a/Day_12_Big/style.css
+++ b/Day_12_Big/style.css
@@ -2,6 +2,14 @@
     margin: 0 auto;
     max-width: 1000px;
 }
+
+body{
+    margin:0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.3125rem;
+    line-height: 1.6;
+    color: #222C2A;
+}
 .intro{
     max-width:1128px;
     background-color: #F3EED9;
