--- a/day_18/style.css
+++ b/day_18/style.css
@@ -14,31 +14,42 @@ section{
     padding: 4em 0;
 }
 
+.container1{
+    width: 85%;
+    margin: 0 auto;
+    max-width: 1128px;
+}
+
 .container{
     width: 85%;
     margin: 0 auto;
+    max-width: 1128px;
+    display: flex;
 }
 
 h1, h2{
     margin-top: 0;
     font-weight: 900;
     font-family: "Playfair Display", sans-serif;
-    line-height: 1;
+    line-height: 1.1;
 }
 
 img{
     max-width: 100%; /*Will shrink them if needed but not overflow*/
 }
 
-.intro{
-    background: #f3EED9;
-    padding: 200px 0px;
-    text-align: center;
-    color: #824936
+.img_cen{
+    display: inline-block;
+    padding-right: 40px;
 }
 
-.container{
-
+.intro{
+    background: #f3EED9;
+    text-align: center;
+    color: #824936;
+    min-height: 660px;
+    display: flex;
+    align-items: center;
 }
 
 .intro_text{
@@ -46,11 +57,11 @@ img{
     font-size: 1.125rem;
     letter-spacing: 10px;
     color: #222222;
-    margin: 0;
+    margin: 0 0 .25em;
 }
 
 .intro_title{
-    font-size: 50px;
+    font-size: 3rem;
 }
 
 .section_title{
@@ -62,10 +73,6 @@ img{
     color: #824936
 }
 
-.section_two{
-
-}
-
 .section_three{
     background-color: #222C2A;
     color: #FFF;
@@ -74,4 +81,20 @@ img{
 .section_four{
     background-color: #824936;
     color: #FFF;
+}
+
+@media (min-width:800px){
+    .row{
+        display: flex;
+    }
+    .col{
+        width: 100%;
+    }
+    .col + .col{
+        margin-left: 5em;
+    }
+
+    .intro_title{
+        font-size: 3.75rem;
+    }
 }
